refactor(scm): TASK-SCM-BE-017 sweep tail — L0 cache port + L6 ActorContextResolver/TenantClaimExtractor/.toList (#844)
* chore(tasks): TASK-SCM-BE-017 ready -> in-progress (impl start)

* refactor(scm): TASK-SCM-BE-017 sweep tail — L0 cache port + L6 layer hygiene

A1 (L0): introduce SkuBreakdownCachePort in application/port/outbound/;
SnapshotAggregationCache implements port; InventoryVisibilityController
now depends on port only — adapter.outbound.cache.* import = 0.
X-Cache HIT/MISS/UNAVAILABLE header behaviour preserved byte-identical.
WebMvcTest 3 cases added.

A2 (L6): move ActorContextResolver infrastructure/security/ →
application/security/ (rename); PurchaseOrderController import updated;
presentation → infrastructure static import = 0.

A3 (L6): introduce TenantClaimExtractor static util in adapter/inbound/web/;
InventoryVisibilityController + NodeStalenessController private extractTenantId
removed; unit test 4 cases (claim present / absent / wildcard / null jwt).

A4 (L6): PurchaseOrderController .collect(Collectors.toList()) → .toList();
unused java.util.stream.Collectors import removed.

./gradlew :projects:scm-platform:apps:procurement-service:check
          :projects:scm-platform:apps:inventory-visibility-service:check
          :projects:scm-platform:apps:gateway-service:check
BUILD SUCCESSFUL — 28 tasks executed, all tests pass.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* chore(tasks): TASK-SCM-BE-017 in-progress -> review (impl complete, Gradle :check GREEN 1m9s)

---------

Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>